# VENDLY-POS

./: .env.example  .gitignore  Dockerfile  LICENSE  OFFLINE_MODE.md  README.md  RESTRUCTURE.md  add_elec.py  add_product_images.py  android-app.json  check_2fa_db.py  check_db.py  check_sales.py  config.example.yaml  docker-compose.health.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redis.bat  redis.sh  seed_data.py  seed_data_v2.py  test_2fa_login.py  test_batch_sync.html  test_categories_api.py  test_offline_sync.py  test_totp.py
server/: alembic.ini  mypy_report.txt  pyproject.toml  requirements.txt  setup_database.py
server/alembic/versions/: backup_tables_001.py  integration_001.py  subscription_001.py
server/app/: __init__.py  main.py  vendly.db-shm  vendly.db-wal
server/app/core/: cache.py  config.py  config_loader.py  deps.py  error_constants.py  error_tracking.py  errors.py  permissions.py  redis_client.py  security.py  websocket.py
server/app/db/: integration_models.py  models.py  multistore_models.py  printer_models.py  redis.py  session.py  subscription_models.py
server/app/schemas/: backup.py  integrations.py  payments.py  peripherals.py  purchase_order.py
server/app/services/: anomaly.py  ask.py  audit.py  auth.py  backup.py  backup_scheduler.py  barcode_service.py  demand_forecast_service.py  email_service.py  forecast.py  health_check.py  integration_service.py  inventory.py  legal_service.py  metrics.py  oauth_service.py  payments.py  price_suggest.py  printer_service.py  purchase_order.py  rate_limit.py  receipt.py  recommend.py  sales.py  session.py  sms_service.py  tax_service.py  (+4 more)
server/scripts/: init_db.py  seed_products.py  seed_subscriptions.py
server/tests/: conftest.py  test_2fa.py  test_ai.py  test_auth.py  test_backup.py  test_barcodes.py  test_coupons.py  test_customers.py  test_demand_forecast.py  test_eod_reports.py  test_errors.py  test_payments.py  test_printers.py  test_products.py  test_reports.py  test_sales.py  test_users.py
(+283 files in other folders)
